# backend-prd-agent

./: .gitignore  RAGService.py  README.md  graph.py  graph_nodes.py  graph_router.py  llm.py  main.py  prd.md  prd_builder.py  prompts.py  pyproject.toml  revision.md  state.py  task-list.md
database/: database.py  models.py  redis.py
tests/: e2e.py  full_e2e.py
