[project]
name = "prd-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-nomic>=0.1.4",
    "langchain-openai>=0.3.30",
    "langchain-pinecone>=0.2.11",
    "langgraph[checkpoint-mongodb]>=0.6.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.27",
    "python-multipart>=0.0.20",
    "unstructured>=0.18.13",
    "uvicorn>=0.35.0",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "pymongo>=4.12.1",
    "redis>=6.4.0",
    "motor>=3.7.1",
]
